# cpp_red

./: CMakeLists.txt  main.cpp
week_1/assignment_1/: log.cpp
week_1/assignment_2/: airline_ticket.h  sort_by.cpp
week_1/assignment_3/: update_field.cpp
week_1/assignment_4/: bad_macro.cpp
week_1/assignment_5/: uniq_id.cpp
week_1/assignment_6/: table.cpp  test_runner.h
week_1/assignment_7/: deque.cpp  deque.h
week_1/assignment_8/: paginator.cpp  test_runner.h
week_2/assignment_1/: compare_students.cpp  profiler.h  sort_students.cpp  student.h
week_2/assignment_2/: learner.cpp
week_2/assignment_3/: expresses.cpp
week_2/assignment_4/: ebook.cpp
week_2/assignment_5/: booking.cpp
week_3/assignment_1/: object_pool.cpp
week_3/assignment_2/: swap_sort_copy.cpp
week_3/assignment_3/: simple_vector.cpp  simple_vector.h
week_3/assignment_4/: linked_list.cpp
week_4/assignment_1/: athlets.cpp
week_4/assignment_2/: stack_vector.cpp  stack_vector.h
week_4/assignment_3/: translator.cpp
week_4/assignment_4/: airport_counter.cpp  profile.h
week_4/assignment_5/: text_editor.cpp
week_4/assignment_6/: http_request.h  server_stats.cpp  stats.cpp  stats.h
week_5/assignment_1/: permutations.cpp
week_5/assignment_10/: synchronized.cpp
week_5/assignment_11/: concurrent_map.cpp
week_5/assignment_2/: group_heavy_strings.cpp
week_5/assignment_3/: simple_vector.cpp  simple_vector.h
week_5/assignment_4/: split_into_sentences.cpp
week_5/assignment_5/: simple_vector.cpp  simple_vector.h  test_runner.h
week_5/assignment_6/: merge_sort.cpp
(+16 files in other folders)
